--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-scrollable-tab-view": "^0.10.0",
     "react-native-simple-dialogs": "^1.2.0",
     "react-native-snap-carousel": "3.7.2",
+    "react-native-super-grid": "^3.1.2",
     "react-native-svg": "^9.11.1",
     "react-native-web": "^0.11.4",
     "react-navigation": "2.12.1",
