--- a/package.json
+++ b/package.json
@@ -17,19 +17,19 @@
     "react-native-elements": "^2.0.0",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-reanimated": "^1.9.0",
-    "react-native-safe-area-context": "^2.0.1",
+    "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "^2.8.0",
     "react-native-super-grid": "^3.2.0",
     "react-native-tab-view": "^2.14.2",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.3.9",
-    "react-navigation-stack": "^2.5.1",
+    "react-navigation-stack": "^2.8.2",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5"
   },
   "devDependencies": {
-    "babel-preset-expo": "~8.1.0",
-    "@babel/core": "^7.8.6"
+    "@babel/core": "^7.8.6",
+    "babel-preset-expo": "~8.1.0"
   },
   "private": true
 }
